Pages and nav ok

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
             <ion-menu-button></ion-menu-button>
           </ion-buttons>
           <ion-title>
-            Home
+            Menu
           </ion-title>
         </ion-toolbar>
       </ion-header>
