--- a/src/app/book-list/book-list.page.html
+++ b/src/app/book-list/book-list.page.html
@@ -10,5 +10,7 @@
 </ion-header>
 
 <ion-content padding>
-
+  <ion-button (click)="presentModal()">
+    <ion-icon name="power"></ion-icon>
+  </ion-button>
 </ion-content>
