--- a/src/app/cd-list/cd-list.page.html
+++ b/src/app/cd-list/cd-list.page.html
@@ -9,5 +9,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content padding>
-
+  <ion-button (click)="presentModal()">
+    <ion-icon name="power"></ion-icon>
+  </ion-button>
 </ion-content>
