--- a/src/app/book-list/lend-book/lend-book.component.html
+++ b/src/app/book-list/lend-book/lend-book.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      bookLend
+      {{ book.title }}
     </ion-title>
     <ion-button (click)="closeModal()" slot="end">
       <ion-icon name="close"></ion-icon>
@@ -10,5 +10,13 @@
 </ion-header>
 
 <ion-content padding>
-<p>{{ value }}</p>
+  <ion-button (click)="responseModal(true)" [disabled]="book.lended">
+    <ion-icon name="cloud-upload"></ion-icon>
+     Preter
+  </ion-button>
+  <ion-button (click)="responseModal(false)" [disabled]="!book.lended">
+    <ion-icon name="cloud-download"></ion-icon>
+     Retourner
+  </ion-button>
+
 </ion-content>
