--- a/src/app/book-list/lend-book/lend-book.component.html
+++ b/src/app/book-list/lend-book/lend-book.component.html
@@ -10,13 +10,20 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-button (click)="responseModal(true)" [disabled]="book.lended">
-    <ion-icon name="cloud-upload"></ion-icon>
-     Preter
-  </ion-button>
-  <ion-button (click)="responseModal(false)" [disabled]="!book.lended">
-    <ion-icon name="cloud-download"></ion-icon>
-     Retourner
-  </ion-button>
-
+    <form #f="ngForm" (ngSubmit)="onSubmitForm(f)">
+        <ion-list>
+            <ion-item>
+                <ion-label>Emprunteur</ion-label>
+                <ion-input name="lendedTo"  clearInput placeholder="Nom de l'emprunteur" [(ngModel)]="book.lendedTo" required></ion-input>
+            </ion-item>
+        </ion-list>
+        <ion-button type="submit" [disabled]="book.lended || f.invalid">
+            <ion-icon name="cloud-upload"></ion-icon>
+            Preter
+        </ion-button>
+        <ion-button (click)="retourner()" [disabled]="!book.lended">
+            <ion-icon name="cloud-download"></ion-icon>
+            Retourner
+        </ion-button>
+    </form>
 </ion-content>
