--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,11 +14,35 @@
       </ion-header>
       <ion-content>
         <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item routerLink="">
+              <ion-icon slot="start" name="home"></ion-icon>
               <ion-label>
-                {{p.title}}
+                Home
+              </ion-label>
+            </ion-item>
+            <ion-item routerLink="/settings">
+              <ion-icon slot="start" name="cog"></ion-icon>
+              <ion-label>
+                Settings
+              </ion-label>
+            </ion-item>
+            <ion-item routerLink="/auth/new" *ngIf="!isAuth">
+              <ion-icon slot="start" name="person-add"></ion-icon>
+              <ion-label>
+                New User
+              </ion-label>
+            </ion-item>
+            <ion-item routerLink="/auth/connect" *ngIf="!isAuth">
+              <ion-icon slot="start" name="person"></ion-icon>
+              <ion-label>
+                Connect
+              </ion-label>
+            </ion-item>
+            <ion-item (click)="onDisconnect()" *ngIf="isAuth">
+              <ion-icon slot="start" name="exit"></ion-icon>
+              <ion-label>
+                Disconnect
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
